-------------------------------------------------------------------------------
Changes in version 0.86

- Allow for addition of user-specified headers with $HEADER_ADD.

- SMTP front end now logs invalid commands.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.85

- Added a QMTP front-end, with many features in common with the SMTP
  front-end (excluding authentication, of course).

- Added a QMQP front-end.

- The front-ends optionally add an extra "fixup" Received: header if
  $FIXUP_RECEIVED_HOST and $FIXUP_RECEIVED_IP are set and differ from
  $TCPLOCALHOST and $TCPLOCALIP.

- Fixed internal variable transposition bug in smtp-commands.c.

- Switched to bglibs 1.006 library scheme.

- Fixed bug: aborting DATA command does not work, must only give
  responses once all the data is received.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.81

- Fixed bug: the qmail backend didn't honour $QMAILQUEUE.

- Fixed bug: environment variables set multiple times in mail rules
  would use the first value.

- Fixed bug: databytes would not be set internally if $DATABYTES was not
  set.

- Fixed bug: all bounces following the first in a single connection
  would be rejected.

- Fixed bug: The "*" pattern failed to match the empty string.

- Abort the DATA command immediately if the databytes limit is reached.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 0.80

- Fixed bug: setting $SMTPGREETING caused smtpfront to crash when issued
  HELO or EHLO commands.
