@@ -63,6 +63,10 @@ want this header added.
 <li>Optional user-specified headers may be added by setting
 <tt>$HEADER_ADD</tt>.
 
+<li>If <tt>$CVM_LOOKUP</tt> is set, recipients are sent to the named CVM
+to see if they are valid.  If <tt>$LOOKUP_SECRET</tt> is set, its value
+is sent as a single credential to the CVM.</tt>
+
 </ul></p>
 
 <h2>Back Ends</h2>
